src/test/resources/semantic/sentences/error/TC_ERROR_OPERATION3.ru
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 7 | COLUMNA 14 | No se permiten operaciones unarias con literales. |

start{
    Int num1;
    num1 = + ++++num1;
}
